--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2980,7 +2980,7 @@ tab_powerline_style round
 tab_bar_style powerline
 # STYLES: fade, slant, separator, powerline, custom, hidden
 tab_bar_align left
-tab_bar_min_tabs 1
+tab_bar_min_tabs 2
 tab_switch_strategy previous
 tab_activity_symbol " *"
 tab_title_max_length 30
@@ -3000,8 +3000,8 @@ tab_bar_margin_color none
 
 # BEGIN_KITTY_COLOR
 foreground #dddddd
-background #000000
-background_opacity 0.8
+background #211a14
+background_opacity 0.9
 background_blur 1
 # transparent_background_colors red@0.5 #00ff00@0.3
 background_image none
