--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -62,6 +62,7 @@ env = HYPRCURSOR_SIZE,24
 env = LIBVA_DRIVER_NAME,nvidia
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = ELECTRON_OZONE_PLATFORM_HINT,auto
+env = ECOSYSTEM, no_update_news
 
 #####################
 ### LOOK AND FEEL ###
@@ -196,7 +197,6 @@ input {
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
-    workspace_swipe = false
 }
 
 # Example per-device config
